[package]
name = "leetcode_for_rust"
version = "0.1.3"
authors = ["Caitlin Gao <caitlin.gaoo@google.com>"]
homepage = "https://github.com/caitlingao/leetcode_rust"
repository = "https://github.com/caitlingao/leetcode_rust"
description = "leetcode for rust"
license = "MIT"
edition = "2018"

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
    "src/cd0001_two_sum/mod.rs",
    "src/cd0015_three_sum/mod.rs",
    "src/cd0020_valid_parentheses/mod.rs",
    "src/cd0098_validate_binary_search_tree/mod.rs",
    "src/cd0206_reverse_linked_list/mod.rs",
    "src/cd0232_implement_queue_using_stacks/mod.rs",
    "src/cd0239_sliding_window_maximum/mod.rs",
    "src/cd0242_valid_anagram/mod.rs",
    "src/cd0703_kth_largest_element_in_a_stream/mod.rs",
]

[lib]
name = "leetcode_for_rust"
crate-type = ["rlib", "staticlib"]

[dependencies]
