[package]
name = "leetcode_for_rust"
version = "0.1.37"
authors = ["Caitlin Gao <caitlin.gaoo@google.com>"]
homepage = "https://github.com/caitlingao/leetcode_rust"
repository = "https://github.com/caitlingao/leetcode_rust"
description = "leetcode for rust"
license = "MIT"
edition = "2018"

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
    "src/cd0001_two_sum/mod.rs",
    "src/cd0002_add_two_numbers/mod.rs",
    "src/cd0003_longest_substring_without_repeating_characters/mod.rs",
    "src/cd0004_median_of_two_sorted_arrays/mod.rs",
    "src/cd0005_longest-palindromic-substring/mod.rs",
    "src/cd0006_zigzag-conversion/mod.rs",
    "src/cd0007_reverse_integer/mod.rs",
    "src/cd0015_three_sum/mod.rs",
    "src/cd0019_remove_nth_node_from_end_of_list/mod.rs",
    "src/cd0020_valid_parentheses/mod.rs",
    "src/cd0021_merge_two_sorted_lists/mod.rs",
    "src/cd0022_generate_parentheses/mod.rs",
    "src/cd0024_swap_nodes_in_pairs/mod.rs",
    "src/cd0025_reverse_nodes_in_k_group/mod.rs",
    "src/cd0033_search_in_rotated_sorted_array/mod.rs",
    "src/cd0036_valid_sudoku/mod.rs",
    "src/cd0037_sudoku_solver/mod.rs",
    "src/cd0050_powx_n/mod.rs",
    "src/cd0051_n_queens/mod.rs",
    "src/cd0052_n_queens_ii/mod.rs",
    "src/cd0069_sqrtx/mod.rs",
    "src/cd0070_climbing_stairs/mod.rs",
    "src/cd0072_edit_distance/mod.rs",
    "src/cd0079_word_search/mod.rs",
    "src/cd0094_binary_tree_inorder_traversal/mod.rs",
    "src/cd0098_validate_binary_search_tree/mod.rs",
    "src/cd0102_binary_tree_level_order_traversal/mod.rs",
    "src/cd0104_maximum_depth_of_binary_tree/mod.rs",
    "src/cd0111_minimum_depth_of_binary_tree/mod.rs",
    "src/cd0120_triangle/mod.rs",
    "src/cd0121_best_time_to_buy_and_sell_stock/mod.rs",
    "src/cd0122_best_time_to_buy_and_sell_stock_ii/mod.rs",
    "src/cd0123_best_time_to_buy_and_sell_stock_iii/mod.rs",
    "src/cd0141_linked_list_cycle/mod.rs",
    "src/cd0144_binary_tree_preorder_traversal/mod.rs",
    "src/cd0145_binary_tree_postorder_traversal/mod.rs",
    "src/cd0152_maximum_product_subarray/mod.rs",
    "src/cd0155_min_stack/mod.rs",
    "src/cd0169_majority_element/mod.rs",
    "src/cd0188_best_time_to_buy_and_sell_stock_iv/mod.rs",
    "src/cd0191_number_of_bits/mod.rs",
    "src/cd0200_number_of_islands/mod.rs",
    "src/cd0206_reverse_linked_list/mod.rs",
    "src/cd0208_implement_trie_prefix_tree/mod.rs",
    "src/cd0212_word_search_ii/mod.rs",
    "src/cd0224_basic_calculator/mod.rs",
    "src/cd0231_power_of_two/mod.rs",
    "src/cd0232_implement_queue_using_stacks/mod.rs",
    "src/cd0239_sliding_window_maximum/mod.rs",
    "src/cd0242_valid_anagram/mod.rs",
    "src/cd0300_longest_increasing_subsequence/mod.rs",
    "src/cd0309_best_time_to_buy_and_sell_stock_with_cooldown/mod.rs",
    "src/cd0322_coin_change/mod.rs",
    "src/cd0338_counting_bits/mod.rs",
    "src/cd0367_valid_perfect_square/mod.rs",
    "src/cd0496_next_greater_element_i/mod.rs",
    "src/cd0547_friend_circles/mod.rs",
    "src/cd0622_design_circular_queue/mod.rs",
    "src/cd0641_design_circular_deque/mod.rs",
    "src/cd0682_baseball_game/mod.rs",
    "src/cd0700_search_in_a_binary_search_tree/mod.rs",
    "src/cd0701_insert_into_a_binary_search_tree/mod.rs",
    "src/cd0703_kth_largest_element_in_a_stream/mod.rs",
    "src/cd0714_best_time_to_buy_and_sell_stock_with_transaction_fee/mod.rs",
    "src/cd0844_backspace_string_compare/mod.rs",
    "src/cd0876_middle_of_the_linked_list/mod.rs",
    "src/cd0933_number_of_recent_calls/mod.rs",
]

[lib]
name = "leetcode_for_rust"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
